test: refine test files (#939)